Restructured all the env var files.

--- a/git_drush_management/site_vars.sample
+++ b/git_drush_management/site_vars.sample
@@ -4,10 +4,10 @@ DRUPAL_LOCATION="public_html/drupal"
 # enter directory to save SQL file from ../drupal directory
 SQL_LOCATION="testing/"
 
-#CAN EITHER SET THIS HERE OR IN git_mang.sh
+#CAN EITHER SET THIS HERE OR IN git_mgmt.sh
 #branch name
-#BRANCH="escience3.6"
+#BRANCH="site3.6"
 
-#CAN EITHER SET THIS HERE OR IN git_mang.sh
+#CAN EITHER SET THIS HERE OR IN git_mgmt.sh
 #tag name
-#TAG="v3."6
+#TAG="v3.6"
